# auto-worklog

./: .gitignore  LICENSE  README.md  flake.nix  main.py  pyproject.toml  requirements.txt  requirments.txt
homeManagerModules/: default.nix
lib/: lock_screen_notifier.py  logic.py  notification.py  toggl_handler.py  tracker.py
nix/: deps.nix  devshell.nix  package.nix
src/auto_worklog/: __init__.py  __main__.py  lock_screen_notifier.py  logging_config.py  logic.py  misc.py  notification.py  toggl_handler.py  tracker.py
